using Microsoft.AspNetCore.Identity;

namespace AuthProvider.Entities
{
    public class ApplicationUser : IdentityUser
    {
    }
}
